--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "module": "index.ts",
   "type": "module",
   "scripts": {
-    "publish:check": "bunx jsr publish --dry-run"
+    "publish:check": "bunx jsr publish --dry-run",
+    "prepare": "husky"
   },
   "devDependencies": {
     "@eslint/js": "^9.4.0",
@@ -11,6 +12,7 @@
     "eslint": "9.x",
     "eslint-config-strict": "^14.0.1",
     "globals": "^15.4.0",
+    "husky": "^9.0.11",
     "typescript-eslint": "^7.12.0"
   },
   "peerDependencies": {
