--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "module": "index.ts",
   "type": "module",
   "scripts": {
-    "publish:check": "bunx jsr publish --dry-run",
+    "jsr:check": "bunx jsr publish --dry-run",
     "prepare": "husky"
   },
   "devDependencies": {
