--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,6 +14,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+      - uses: oven-sh/setup-bun@v1
 
+      - name: install package
+        run: bun install
       - name: Publish package
-        run: npx jsr publish
+        run: bunx jsr publish
